updated package name for easy install

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "YOM - AngularJS Second Testing Article",
+  "name": "YOM-AngularJS-Second-Testing-Article",
   "version": "0.0.0",
-  "dependencies": {
+  "devDependencies": {
     "karma": "0.8.4",
     "chai": "1.6.0",
     "http-server": "0.5.3"
