--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,10 @@
 {
-  "name":  "yearofmoo",
+  "name": "yearofmoo",
   "version": "0.0.1",
   "dependencies": {
-    "gumby": "latest",
-    "jquery": "latest",
-    "greensock-js": "latest",
-    "animate.css": "latest",
-    "ngAnimate-animate.css": "git@github.com:yearofmoo/ngAnimate-animate.css.git"
+    "greensock": "~1.16.1",
+    "jquery": "~2.1.3",
+    "animate.css": "~3.2.6",
+    "lunr.js": "~0.5.7"
   }
 }
