--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "YOM-AngularJS-Second-Testing-Article",
+  "name": "YOM-Angular-Portfolio",
   "version": "0.0.0",
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-css": "~0.5.4",
-    "grunt-contrib-connect": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-shell": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-karma": "latest",
+  "dependencies": {
     "bower": "~0.9.2",
-    "lunr": "latest",
-    "karma": "0.8.4",
-    "karma-mocha": "latest",
-    "karma-chrome-launcher": "latest",
-    "karma-safari-launcher": "latest",
-    "karma-firefox-launcher": "latest",
-    "karma-ng-scenario": "latest",
-    "chai": "1.6.0"
+    "chai": "^1.6.0",
+    "gulp": "^3.8.11",
+    "gulp-server": "^0.1.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-mocha": "^0.1.10",
+    "mocha": "^2.2.1"
   }
 }
